Add underline function
Refactor loadDictionaries to return user object {dict, prefs}
Fix loadDictionarieAndPrefs race condition messing with user preferred 
language order
Add and update build script to bundle content into dist
Restructure project directory
Move content helpers into helpers file

--- a/manifest.json
+++ b/manifest.json
@@ -10,13 +10,13 @@
   },
 
   "background": {
-    "scripts": ["background.js"]
+    "scripts": ["dist/background.js"]
   },
 
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["content.js"]
+      "js": ["dist/content.js"]
     }
   ],
 
