Fix text cleaner to properly split and recognize more words
Fixes debug message for unfound misspelt words to properly show 
remaining string
Adds DOMPurify dependency (not yet used)
Add Tern config file

--- a/.eslintignore
+++ b/.eslintignore
@@ -1,2 +1,5 @@
-# tell eslint to ignore dist folder and everything in it
+# ignore dist folder and everything in it
 dist/**
+
+# ignore minified purify dependency
+src/deps/dompurify/**
