--- a/manifest.json
+++ b/manifest.json
@@ -16,7 +16,7 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["dist/content.js"],
+      "js": ["src/deps/dompurify/purify.min.js", "dist/content.js"],
       "css": ["src/deps/highlight/highlight.css"]
     }
   ],
