Add word suggestion carousel feature
Add blinking effect for misspelt words that have no suggestions
Add gitkeep file and update gitignore
Add Word and Spelling classes, move User class into classes file
Add highlight helper functions to target right mark when showing word suggestions
Add helper functions for checking and getting word boundaries
Fixes spellcheck not firing when user clicks inside textarea
Fixes selected word not reflecting caret position (use keyup event)
Fixes bug with trailing single quotes being highlighted when they shouldn't be
Fixes words being saved inconsistently depending on how save word is triggered
Removes duplicate languages and prevents duplicate dictionaries

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
 # ignore node modules, web-ext-artifacts, and everything inside the dist folder
 /node_modules
 /web-ext-artifacts
-/dist/**
+/dist/*.js
