--- a/manifest.json
+++ b/manifest.json
@@ -1,16 +1,22 @@
 {
   "manifest_version": 2,
-  "name": "Multi Dictionary",
+  "name": "MultiDict",
   "description": "Because spell checking should be smart, not difficult.",
   "homepage_url": "https://github.com/GrayedFox/multi-dict",
   "version": "1.0.0",
   "icons": {
-    "48": "icons/icon-64.png",
-    "96": "icons/icon-128.png"
+    "48": "media/icons/icon-64.png",
+    "96": "media/icons/icon-128.png"
   },
 
   "background": {
     "scripts": ["dist/background.js"]
+  },
+
+  "browser_action" : {
+    "default_icon": "media/icons/icon.svg",
+    "default_popup": "src/popup/popup.html",
+    "default_title": "MultiDict"
   },
 
   "browser_specific_settings": {
@@ -41,5 +47,5 @@
 
   "permissions": ["storage", "contextMenus"],
 
-  "web_accessible_resources": ["dictionaries/*.aff, dictionaries/*.dic"]
+  "web_accessible_resources": ["dictionaries/*.aff", "dictionaries/*.dic", "media/icons/*.svg"]
 }
