Fix empty textarea throwing exception when trying to set selected word
Change display mode to inline-flex to prevent whitespace being added
Fix suggestions appearing above instead of directly overlayed of word

Apply github domain specific styles
Remove unneeded styling from highlights.css

Finish WordCarousel class and refactoring higlight.js carousel logic

Update Spelling class to generate list of Words (not just strings)
Add higlight.js helper to set currentMarkIndex
Refactor helpers and move them from highlights.js into helpers file

Refactor and update Higlighter to use ES6 class syntax
Optimise content script to only destroy and re-create higlighter if changing editable nodes

Force spelling recheck after adding/removing a word

Fixes switching tabs breaking spell checking
Fixes new tabs not having spell checking
Refactors message sending between background and content script to be more efficient
Update current mark during handle select method of highlight

Reset port to current port after popup closes

--- a/manifest.json
+++ b/manifest.json
@@ -45,7 +45,7 @@
     }
   },
 
-  "permissions": ["storage", "contextMenus"],
+  "permissions": ["storage", "contextMenus", "tabs"],
 
   "web_accessible_resources": ["dictionaries/*.aff", "dictionaries/*.dic", "media/icons/*.svg"]
 }
