Fix remove word using popup not forcing a recheck
Update npm run serve to also build app before serving

Update npm and packages

Update readme

Add boolean setting to popup
Add settings retrieval when extension loads
Add update persistent settings via popup window
Remove debug logging
Update package, manifest, and web-ext files to workaround weird bug

Use settings object instead of array after retrieving and storing values

Add feature to remove native spell checking from all textareas

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "bash build.sh",
     "lint": "eslint .",
     "lint-fix": "eslint . --fix",
-    "serve": "web-ext run",
+    "serve": "bash build.sh && web-ext run",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -27,12 +27,13 @@
   },
   "homepage": "https://github.com/GrayedFox/multi-dict#readme",
   "devDependencies": {
-    "browserify": "^16.5.0",
-    "eslint": "^6.5.1",
-    "eslint-config-standard": "^14.1.0",
-    "eslint-plugin-import": "^2.18.2",
+    "browserify": "^16.5.1",
+    "eslint": "^6.8.0",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-node": "^9.2.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1"
-  }
+  },
+  "dependencies": {}
 }
