refactor connection and messaging behaviour
update content script to send single message instances

Update background script to send single instance messages (no ports)

Update all scripts to work with new message format

Update manifest and scripts to use menus instead of contextMenus api

Fix undefined type being sent to background script

Fix selectionBounds error when user clicks in 1st textarea position

Fix spellchecker breaking on page refresh
Add logging for api message

Fix initial page load not disabling native spell check

--- a/manifest.json
+++ b/manifest.json
@@ -45,7 +45,7 @@
     }
   },
 
-  "permissions": ["storage", "contextMenus", "tabs"],
+  "permissions": ["storage", "menus", "tabs"],
 
   "web_accessible_resources": ["dictionaries/*.aff", "dictionaries/*.dic", "media/icons/*.svg"]
 }
