--- a/manifest.json
+++ b/manifest.json
@@ -29,8 +29,7 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["dist/content.js"],
-      "css": ["src/deps/highlight/highlight.css"]
+      "js": ["dist/content.js"]
     }
   ],
 
