Cleanup popup and clarify background script comment
Add custom colour picker and convert popup to sidebar

Ensure colour picker default value updates, add preview colour handler

Add rebuild function to highlighter to prevent colour flash mismatch

Make highlights and color picker input button sexier

--- a/manifest.json
+++ b/manifest.json
@@ -15,7 +15,12 @@
 
   "browser_action" : {
     "default_icon": "media/icons/icon.svg",
-    "default_popup": "src/popup/popup.html",
+    "default_title": "MultiDict"
+  },
+
+  "sidebar_action": {
+    "default_icon": "media/icons/icon.svg",
+    "default_panel": "src/sidebar/sidebar.html",
     "default_title": "MultiDict"
   },
 
