--- a/manifest.json
+++ b/manifest.json
@@ -15,13 +15,13 @@
 
   "browser_action" : {
     "default_icon": "media/icons/icon.svg",
-    "default_title": "MultiDict"
+    "default_title": "Multidict"
   },
 
   "sidebar_action": {
     "default_icon": "media/icons/icon.svg",
     "default_panel": "dist/sidebar/sidebar.html",
-    "default_title": "MultiDict"
+    "default_title": "Multidict"
   },
 
   "browser_specific_settings": {
@@ -39,17 +39,17 @@
   ],
 
   "commands": {
-    "add": {
+    "addCustomWord": {
       "suggested_key": { "default": "Alt+Shift+A" },
       "description": "Add a word to your personal dictionary"
     },
-    "remove": {
+    "removeCustomWord": {
       "suggested_key": { "default": "Alt+Shift+D" },
       "description": "Remove a word from your personal dictionary"
     }
   },
 
-  "permissions": ["storage", "menus", "tabs"],
+  "permissions": ["storage", "menus", "tabs", "notifications"],
 
   "web_accessible_resources": ["dictionaries/*.aff", "dictionaries/*.dic", "media/icons/*.svg"]
 }
