--- a/package.json
+++ b/package.json
@@ -36,5 +36,7 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1"
   },
-  "dependencies": {}
+  "dependencies": {
+    "nspell": "^2.1.2"
+  }
 }
