--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "Spell check in multiple languages with this Firefox addon",
   "main": "src/background.js",
   "scripts": {
-    "publish": "web-ext build && zip dist/sourcecode -r src/**",
     "build": "bash build.sh",
     "lint": "eslint .",
     "lint-fix": "eslint . --fix",
-    "serve": "bash build.sh && web-ext run",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "publish": "web-ext build && zip dist/sourcecode -r src/**",
+    "serve": "bash tasks/build.sh && web-ext run",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "update-dicts": "bash tasks/update-dicts.sh"
   },
   "repository": {
     "type": "git",
