--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "src/background.js",
   "scripts": {
     "build": "bash build.sh",
+    "docs": "node_modules/jsdoc/jsdoc.js -c jsdoc-config.json --pedantic",
     "lint": "eslint .",
     "lint-fix": "eslint . --fix",
     "publish": "web-ext build && zip dist/sourcecode -r src/**",
@@ -35,7 +36,9 @@
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-node": "^9.2.0",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1"
+    "eslint-plugin-standard": "^4.0.1",
+    "jsdoc": "^3.6.4",
+    "minami": "^1.2.3"
   },
   "dependencies": {
     "nspell": "^2.1.2"
