Update eslint and npm eslint plugins
Add linter github workflow

Ensure gh task fails on lint error

Ensure diff doesn't run eslint on files outside source directory

Resolve test errors

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -12,14 +12,14 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Build
+      - name: Build JSDOCs
         uses: andstor/jsdoc-action@v1
         with:
           config_file: jsdoc-config.json
           template: minami
           front_page: ./README.md
 
-      - name: Deploy
+      - name: Deploy github pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
