--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "build": "bash tasks/build.sh",
     "docs": "node_modules/jsdoc/jsdoc.js -c jsdoc-config.json --pedantic",
-    "lint": "eslint .",
-    "lint-fix": "eslint . --fix",
+    "lint": "eslint ./src/",
+    "lint-fix": "eslint ./src/ --fix",
     "publish": "web-ext build && zip dist/sourcecode -r src/**",
     "serve": "bash tasks/build.sh && web-ext run",
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -31,10 +31,10 @@
   "homepage": "https://github.com/GrayedFox/multi-dict#readme",
   "devDependencies": {
     "browserify": "^16.5.1",
-    "eslint": "^6.8.0",
+    "eslint": "^7.5.0",
     "eslint-config-standard": "^14.1.1",
     "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-node": "^9.2.0",
+    "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
     "jsdoc": "^3.6.4",
