--- a/.github/workflows/pull-request-tasks.yml
+++ b/.github/workflows/pull-request-tasks.yml
@@ -1,4 +1,4 @@
-name: Pull Request Tasks
+name: Linting and Unit Tests
 
 on: pull_request
 
@@ -6,20 +6,24 @@ jobs:
   lint:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - name: 'Reviewdog: ESLint'
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Reviewdog ESLint comments
         uses: reviewdog/action-eslint@v1
         with:
           github_token: ${{ secrets.github_token }}
-          reporter: 'github-pr-review'
+          reporter: github-pr-review
           fail_on_error: true
           eslint_flags: './src/ ./test/'
 
   test:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - name: Setup node
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Setup Node
         uses: actions/setup-node@v1
         with:
             node-version: '12'
@@ -27,10 +31,10 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: 'Run Mocha/Chai unit tests'
+      - name: Run Mocha/Chai unit tests
         run: npm test
 
-      - name: 'Upload coverage to Codecov'
+      - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v1
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
